# ObfusC

./: .gitignore  CMakeLists.txt  main.cpp
source/: CMakeLists.txt  FuncAttributeStore.cpp
source/BCF/: BcfPass.cpp
source/CFF/: CffPass.cpp
source/ESTR/: CMakeLists.txt  EstrAttribute.cpp  EstrPass.cpp  EstrPass.hpp
source/IBR/: CMakeLists.txt  IbrAttribute.cpp  IbrPass.cpp  IbrPass.hpp
source/ICALL/: CMakeLists.txt  IcallAttribute.cpp  IcallPass.cpp  IcallPass.hpp
source/ISUB/: iSubPass.cpp
source/LSC/: CMakeLists.txt  LscAttribute.cpp  LscPass.cpp  LscPass.hpp
source/MBA/: MbaPass.cpp  MbaPass.hpp
source/Passes/: FuncAnnotationsParser.cpp  IObfuscationPass.cpp  IObfuscationPass.hpp  ObfuscationPassManager.cpp
source/SPLIT/: CMakeLists.txt  SplitAttribute.cpp  SplitPass.cpp  SplitPass.hpp
source/UCD/: CMakeLists.txt  UcdAttribute.cpp  UcdPass.cpp  UcdPass.hpp
source/VIRT/: CMakeLists.txt  VirtAttribute.cpp  VirtPass.cpp  VirtPass.hpp
tests/: TestAll.cpp  ibrTest.cpp  splitTest.cpp
